--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "serve": "ng serve",
     "build": "ng build",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "test:spec": "jest",
+    "test:spec:watch": "jest --watch"
   },
   "private": true,
   "husky": {
@@ -32,9 +34,12 @@
     "@angular/language-service": "~9.1.4",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/jest": "^25.2.1",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "jest-preset-angular": "^8.1.3",
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
     "ts-node": "~8.3.0",
