--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "codelyzer": "^5.1.2",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
+    "jest-junit": "^10.0.0",
     "jest-preset-angular": "^8.1.3",
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
