feat: add masonry component

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/common": "~9.1.4",
     "@angular/compiler": "~9.1.4",
     "@angular/core": "~9.1.4",
+    "@angular/elements": "^9.1.4",
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
@@ -48,6 +49,11 @@
     "tslint-config-prettier": "^1.18.0",
     "typescript": "~3.8.3"
   },
+  "peerDependencies": {
+    "@angular/core": ">=8.0.0",
+    "@angular/elements": ">=8.0.0",
+    "@angular/platform-browser": ">=8.0.0"
+  },
   "bit": {
     "env": {
       "compiler": "bit.envs/compilers/angular@9.0.14"
@@ -56,6 +62,14 @@
     "packageManager": "yarn",
     "saveDependenciesAsComponents": true,
     "overrides": {
+      "*": {
+        "peerDependencies": {
+          "@angular/common": ">=8.0.0",
+          "@angular/compiler": ">=8.0.0",
+          "@angular/compiler-cli": ">=8.0.0",
+          "zone.js": ">=0.10.0"
+        }
+      },
       "sass": {
         "env": {
           "compiler": "-"
