--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,9 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:13.6.0
+      - image: cypress/base:13.6.0
+        environment:
+          TERM: xterm
     steps:
       - checkout
       - restore_cache:
@@ -36,5 +38,12 @@ jobs:
       - run:
           name: test:spec
           command: yarn test:spec --coverage --maxWorkers=2
+      - run:
+          name: test:e2e
+          command: yarn test:e2e
       - store_test_results:
           path: reports
+      - store_artifacts:
+          path: cypress/videos
+      - store_artifacts:
+          path: cypress/screenshots
