--- a/package.json
+++ b/package.json
@@ -18,31 +18,31 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "~11.2.13",
-    "@angular/common": "~10.1.5",
-    "@angular/compiler": "~10.1.5",
-    "@angular/core": "~10.1.5",
-    "@angular/elements": "^10.1.5",
-    "@angular/forms": "11.2.13",
-    "@angular/platform-browser": "~10.1.5",
-    "@angular/platform-browser-dynamic": "~11.2.13",
-    "@angular/router": "~11.2.13",
+    "@angular/animations": "~11.2.14",
+    "@angular/common": "~11.2.14",
+    "@angular/compiler": "~11.2.14",
+    "@angular/core": "~11.2.14",
+    "@angular/elements": "^11.2.14",
+    "@angular/forms": "11.2.14",
+    "@angular/platform-browser": "~11.2.14",
+    "@angular/platform-browser-dynamic": "~11.2.14",
+    "@angular/router": "~11.2.14",
     "fuse.js": "^6.4.6",
     "popmotion-pose": "^3.4.11",
     "rxjs": "~6.6.7",
-    "tslib": "^2.5.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "~10.2.0",
-    "@angular/compiler-cli": "~10.1.5",
-    "@angular/language-service": "~11.2.13",
+    "@angular-devkit/build-angular": "~0.1102.19",
+    "@angular/cli": "~11.2.19",
+    "@angular/compiler-cli": "~11.2.14",
+    "@angular/language-service": "~11.2.14",
     "@commitlint/cli": "^12.1.3",
     "@commitlint/config-conventional": "^12.1.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.2",
-    "codelyzer": "^6.0.2",
+    "codelyzer": "^6.0.0",
     "cypress": "^5.6.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
@@ -56,11 +56,7 @@
     "tslint-config-prettier": "^1.18.0",
     "typescript": "~4.0.8"
   },
-  "peerDependencies": {
-    "@angular/core": ">=8.0.0",
-    "@angular/elements": ">=8.0.0",
-    "@angular/platform-browser": ">=8.0.0"
-  },
+  "peerDependencies": {},
   "bit": {
     "env": {
       "compiler": "bit.envs/compilers/angular@9.0.14"
