--- a/angular.json
+++ b/angular.json
@@ -76,14 +76,16 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": ["tsconfig.app.json"],
-            "exclude": ["**/node_modules/**"]
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
           }
         }
       }
     }
   },
-  "defaultProject": "components-angular"
+  "defaultProject": "components-angular",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
