--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "~12.2.17",
-    "@angular/common": "~12.2.17",
-    "@angular/compiler": "~12.2.17",
-    "@angular/core": "~12.2.17",
-    "@angular/elements": "^12.2.17",
-    "@angular/forms": "12.2.17",
-    "@angular/platform-browser": "~12.2.17",
-    "@angular/platform-browser-dynamic": "~12.2.17",
-    "@angular/router": "~12.2.17",
+    "@angular/animations": "~13.4.0",
+    "@angular/common": "~13.4.0",
+    "@angular/compiler": "~13.4.0",
+    "@angular/core": "~13.4.0",
+    "@angular/elements": "^13.4.0",
+    "@angular/forms": "13.4.0",
+    "@angular/platform-browser": "~13.4.0",
+    "@angular/platform-browser-dynamic": "~13.4.0",
+    "@angular/router": "~13.4.0",
     "fuse.js": "^6.4.6",
     "popmotion-pose": "^3.4.11",
     "rxjs": "~6.6.7",
@@ -34,27 +34,35 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.18",
-    "@angular/cli": "~12.2.18",
-    "@angular/compiler-cli": "~12.2.17",
-    "@angular/language-service": "~12.2.17",
+    "@angular-devkit/build-angular": "~13.3.11",
+    "@angular-eslint/builder": "13.5.0",
+    "@angular-eslint/eslint-plugin": "13.5.0",
+    "@angular-eslint/eslint-plugin-template": "13.5.0",
+    "@angular-eslint/schematics": "13.5.0",
+    "@angular-eslint/template-parser": "13.5.0",
+    "@angular/cli": "~13.3.11",
+    "@angular/compiler-cli": "~13.4.0",
+    "@angular/language-service": "~13.4.0",
     "@commitlint/cli": "^12.1.3",
     "@commitlint/config-conventional": "^12.1.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.2",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
     "codelyzer": "^6.0.0",
     "cypress": "^5.6.0",
+    "eslint": "^8.17.0",
     "husky": "^6.0.0",
-    "jest": "^26.6.3",
+    "jest": "^29.5.0",
     "jest-junit": "^16.0.0",
-    "jest-preset-angular": "^8.4.0",
+    "jest-preset-angular": "^13.0.1",
     "lint-staged": "^11.0.1",
     "prettier": "^2.1.2",
     "start-server-and-test": "^1.12.1",
     "ts-node": "~10.1.0",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.4"
   },
   "peerDependencies": {},
   "bit": {
