chore(package): update angular to v14

--- a/angular.json
+++ b/angular.json
@@ -84,8 +84,7 @@
       }
     }
   },
-  "defaultProject": "components-angular",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": ["@angular-eslint/schematics"]
   }
 }
