--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "~13.4.0",
-    "@angular/common": "~13.4.0",
-    "@angular/compiler": "~13.4.0",
-    "@angular/core": "~13.4.0",
-    "@angular/elements": "^13.4.0",
-    "@angular/forms": "13.4.0",
-    "@angular/platform-browser": "~13.4.0",
-    "@angular/platform-browser-dynamic": "~13.4.0",
-    "@angular/router": "~13.4.0",
+    "@angular/animations": "^14.3.0",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/elements": "^14.3.0",
+    "@angular/forms": "14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
     "fuse.js": "^6.4.6",
     "popmotion-pose": "^3.4.11",
     "rxjs": "~6.6.7",
@@ -34,15 +34,15 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.11",
-    "@angular-eslint/builder": "13.5.0",
-    "@angular-eslint/eslint-plugin": "13.5.0",
-    "@angular-eslint/eslint-plugin-template": "13.5.0",
-    "@angular-eslint/schematics": "13.5.0",
-    "@angular-eslint/template-parser": "13.5.0",
-    "@angular/cli": "~13.3.11",
-    "@angular/compiler-cli": "~13.4.0",
-    "@angular/language-service": "~13.4.0",
+    "@angular-devkit/build-angular": "^14.2.11",
+    "@angular-eslint/builder": "^14",
+    "@angular-eslint/eslint-plugin": "^14",
+    "@angular-eslint/eslint-plugin-template": "^14",
+    "@angular-eslint/schematics": "^14",
+    "@angular-eslint/template-parser": "^14",
+    "@angular/cli": "^14.2.11",
+    "@angular/compiler-cli": "^14.3.0",
+    "@angular/language-service": "^14.3.0",
     "@commitlint/cli": "^12.1.3",
     "@commitlint/config-conventional": "^12.1.3",
     "@types/jest": "^26.0.23",
