--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,12 +25,13 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "target": "es2020",
+    "target": "ES2022",
     "lib": ["es2018", "dom", "dom.iterable"],
     "paths": {
       "@bit/rajansolanki.dev.*": ["./src/app/components/*"],
       "routes": ["./src/app/routes"]
-    }
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
