--- a/package.json
+++ b/package.json
@@ -8,15 +8,10 @@
     "test:spec": "jest",
     "test:spec:watch": "jest --watch",
     "test:e2e": "start-test serve http://localhost:4200 '$(npm bin)/cypress run'",
-    "test:e2e:watch": "start-test serve http://localhost:4200 '$(npm bin)/cypress open'"
+    "test:e2e:watch": "start-test serve http://localhost:4200 '$(npm bin)/cypress open'",
+    "prepare": "husky"
   },
   "private": true,
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
-    }
-  },
   "dependencies": {
     "@angular/animations": "^15.2.8",
     "@angular/common": "^15.2.8",
@@ -50,7 +45,7 @@
     "codelyzer": "^6.0.0",
     "cypress": "^5.6.0",
     "eslint": "^8.17.0",
-    "husky": "^6.0.0",
+    "husky": "^9.0.11",
     "jest": "^29.5.0",
     "jest-junit": "^16.0.0",
     "jest-preset-angular": "^13.0.1",
